force-app/main/default/objects/Policy_Quote__c/Policy_Quote__c.object-meta.xml
<CustomObject>
    <label>Quote</label>
    <nameField>
        <displayFormat>Quote-{000000}</displayFormat>
        <label>Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>