force-app/main/default/objects/Policy_Quote__c/fields/Additional_Premium__c.field-meta.xml
<CustomField>
    <fullName>Additional_Premium__c</fullName>
    <label>Additional Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>