force-app/main/default/objects/Policy_Quote__c/fields/ADJ_R_O__c.field-meta.xml
<CustomField>
    <fullName>ADJ_R_O__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ADJ R.O.</label>
    <type>Checkbox</type>
</CustomField>