force-app/main/default/objects/Policy_Quote__c/fields/Base_ILF_SRF_Step_0__c.field-meta.xml
<CustomField>
    <fullName>Base_ILF_SRF_Step_0__c</fullName>
    <label>Base ILF SRF Step 0</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>