force-app/main/default/objects/Policy_Quote__c/fields/Coverage_Factor__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Factor__c</fullName>
    <label>Coverage Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>