force-app/main/default/objects/Policy_Quote__c/fields/Coverage_Max_Per_Claim__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Max_Per_Claim__c</fullName>
    <label>Per Claim Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>