force-app/main/default/objects/Policy_Quote__c/fields/Customer_Application__c.field-meta.xml
<CustomField>
    <fullName>Customer_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Application</label>
    <referenceTo>Customer_Application__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>