force-app/main/default/objects/Policy_Quote__c/fields/Debug_Log_For_Internal__c.field-meta.xml
<CustomField>
    <fullName>Debug_Log_For_Internal__c</fullName>
    <description>This field is created for internal debug log for premium calculation Quote wise.</description>
    <label>Debug Log For Internal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>