force-app/main/default/objects/Policy_Quote__c/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Deductibles</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>Deductible_Factor__c.Master_Factor__r.Default__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Bypass_Default_Deductible_Factor__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Source.Bypass_Default_Deductible_Factor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Deductible_Factor__c</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>