force-app/main/default/objects/Policy_Quote__c/fields/Deductible_Amount_Final__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Amount_Final__c</fullName>
    <formula>Deductible_Amount_Step_0__c +
Deductible_Amount_Step_1__c +
Deductible_Amount_Step_2__c +
Deductible_Amount_Step_3__c +
Deductible_Amount_Step_4__c +
Deductible_Amount_Step_5__c +
Deductible_Amount_Step_6__c +
Deductible_Amount_Step_7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deductible Amount Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>