force-app/main/default/objects/Policy_Quote__c/fields/Deductible_Amount_Step_0__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Amount_Step_0__c</fullName>
    <label>Deductible Amount Step 0</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>