force-app/main/default/objects/Policy_Quote__c/fields/Deductible_Factor__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Factor__c</fullName>
    <label>Deductible Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>