force-app/main/default/objects/Policy_Quote__c/fields/Deductibles_Formula__c.field-meta.xml
<CustomField>
    <fullName>Deductibles_Formula__c</fullName>
    <formula>Deductible__r.Name</formula>
    <label>Deductibles</label>
    <type>Text</type>
</CustomField>