force-app/main/default/objects/Policy_Quote__c/fields/Excess_Final__c.field-meta.xml
<CustomField>
    <fullName>Excess_Final__c</fullName>
    <formula>Excess_Step_0__c + Excess_Step_1__c + Excess_Step_2__c + Excess_Step_3__c + Excess_Step_4__c + Excess_Step_5__c + Excess_Step_6__c + Excess_Step_7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excess Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>