force-app/main/default/objects/Policy_Quote__c/fields/Excess_Step_2__c.field-meta.xml
<CustomField>
    <fullName>Excess_Step_2__c</fullName>
    <label>Excess Step 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>