force-app/main/default/objects/Policy_Quote__c/fields/Final_Quote__c.field-meta.xml
<CustomField>
    <fullName>Final_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Quote</label>
    <type>Checkbox</type>
</CustomField>