force-app/main/default/objects/Policy_Quote__c/fields/Firm_BillingCity__c.field-meta.xml
<CustomField>
    <fullName>Firm_BillingCity__c</fullName>
    <formula>Policy__r.Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm BillingCity</label>
    <type>Text</type>
</CustomField>