force-app/main/default/objects/Policy_Quote__c/fields/Firm_BillingState__c.field-meta.xml
<CustomField>
    <fullName>Firm_BillingState__c</fullName>
    <formula>Policy__r.Account__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm BillingState</label>
    <type>Text</type>
</CustomField>