force-app/main/default/objects/Policy_Quote__c/fields/Firm_BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>Firm_BillingStreet__c</fullName>
    <formula>Policy__r.Account__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm BillingStreet</label>
    <type>Text</type>
</CustomField>