force-app/main/default/objects/Policy_Quote__c/fields/Firm_BillingZIP__c.field-meta.xml
<CustomField>
    <fullName>Firm_BillingZIP__c</fullName>
    <formula>Policy__r.Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm BillingZIP</label>
    <type>Text</type>
</CustomField>