force-app/main/default/objects/Policy_Quote__c/fields/Firm_Prior_Acts_Date__c.field-meta.xml
<CustomField>
    <fullName>Firm_Prior_Acts_Date__c</fullName>
    <formula>Policy__r.Policy_Retroactive_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Prior Acts Date</label>
    <type>Date</type>
</CustomField>