force-app/main/default/objects/Policy_Quote__c/fields/Full_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Full_Coverage__c</fullName>
    <label>Aggregate Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>