force-app/main/default/objects/Policy_Quote__c/fields/Is_Excess_Value_Zero__c.field-meta.xml
<CustomField>
    <fullName>Is_Excess_Value_Zero__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Excess Value Zero</label>
    <type>Checkbox</type>
</CustomField>