force-app/main/default/objects/Policy_Quote__c/fields/Is_Final_Quote__c.field-meta.xml
<CustomField>
    <fullName>Is_Final_Quote__c</fullName>
    <formula>If(Final_Quote__c , &apos;Yes&apos; , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Final Quote</label>
    <type>Text</type>
</CustomField>