force-app/main/default/objects/Policy_Quote__c/fields/Lowest_Coverage_MasterID__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Coverage_MasterID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is using to calculate Deductible factor amount.</description>
    <label>Lowest Coverage MasterID</label>
    <referenceTo>Master_Factor__c</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>