force-app/main/default/objects/Policy_Quote__c/fields/Mid_Coverage_MasterID__c.field-meta.xml
<CustomField>
    <fullName>Mid_Coverage_MasterID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mid Coverage MasterID</label>
    <referenceTo>Master_Factor__c</referenceTo>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>