force-app/main/default/objects/Policy_Quote__c/fields/Mod_230__c.field-meta.xml
<CustomField>
    <fullName>Mod_230__c</fullName>
    <label>Mod_230</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>