force-app/main/default/objects/Policy_Quote__c/fields/Mod_261__c.field-meta.xml
<CustomField>
    <fullName>Mod_261__c</fullName>
    <label>Mod_261</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>