force-app/main/default/objects/Policy_Quote__c/fields/Percnt_amt_5X5_Step_1__c.field-meta.xml
<CustomField>
    <fullName>Percnt_amt_5X5_Step_1__c</fullName>
    <label>Percnt amt 5X5 Step 1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>