force-app/main/default/objects/Policy_Quote__c/fields/Policy_Firm__c.field-meta.xml
<CustomField>
    <fullName>Policy_Firm__c</fullName>
    <formula>Policy__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Firm</label>
    <type>Text</type>
</CustomField>