force-app/main/default/objects/Policy_Quote__c/fields/Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>Policy_ID__c</fullName>
    <formula>Policy__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy ID</label>
    <type>Text</type>
</CustomField>