force-app/main/default/objects/Policy_Quote__c/fields/Policy_Quote_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Policy_Quote_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Policy Quote External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>