force-app/main/default/objects/Policy_Quote__c/fields/Premium_Rate_5X5__c.field-meta.xml
<CustomField>
    <fullName>Premium_Rate_5X5__c</fullName>
    <label>Premium Rate 5X5</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>