force-app/main/default/objects/Policy_Quote__c/fields/Primary_Final__c.field-meta.xml
<CustomField>
    <fullName>Primary_Final__c</fullName>
    <formula>Primary_Step_0__c + Primary_Step_1__c + Primary_Step_2__c + Primary_Step_3__c + Primary_Step_4__c + Primary_Step_5__c + Primary_Step_6__c + Primary_Step_7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>