force-app/main/default/objects/Policy_Quote__c/fields/Primary_Step_1__c.field-meta.xml
<CustomField>
    <fullName>Primary_Step_1__c</fullName>
    <label>Primary Step 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>