force-app/main/default/objects/Policy_Quote__c/fields/Primary_Step_2__c.field-meta.xml
<CustomField>
    <fullName>Primary_Step_2__c</fullName>
    <label>Primary Step 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>