force-app/main/default/objects/Policy_Quote__c/fields/Quote_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expire_Date__c</fullName>
    <defaultValue>TODAY() + 30</defaultValue>
    <label>Quote Expiry Date</label>
    <type>Date</type>
</CustomField>