force-app/main/default/objects/Policy_Quote__c/fields/Quote_Final_Premium__c.field-meta.xml
<CustomField>
    <fullName>Quote_Final_Premium__c</fullName>
    <formula>(Quote_Premium_Amount__c + Additional_Premium__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>