force-app/main/default/objects/Policy_Quote__c/fields/Quote_Final_Premium_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Quote_Final_Premium_Monthly__c</fullName>
    <formula>Quote_Final_Premium__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Final Premium Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>