force-app/main/default/objects/Policy_Quote__c/fields/Quote_Premium_AllStep_For_5X5__c.field-meta.xml
<CustomField>
    <fullName>Quote_Premium_AllStep_For_5X5__c</fullName>
    <formula>Quote_Premium_Step0_For_5X5__c +
Quote_Premium_Step1_For_5X5__c +
Quote_Premium_Step2_For_5X5__c +
Quote_Premium_Step3_For_5X5__c +
Quote_Premium_Step4_For_5X5__c +
Quote_Premium_Step5_For_5X5__c +
Quote_Premium_Step6_For_5X5__c +
Quote_Premium_Step7_For_5X5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5X5 Premium For All Step</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>