force-app/main/default/objects/Policy_Quote__c/fields/Quote_Premium_Amount_Imported__c.field-meta.xml
<CustomField>
    <fullName>Quote_Premium_Amount_Imported__c</fullName>
    <label>Quote Premium Amount Imported</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>