force-app/main/default/objects/Policy_Quote__c/fields/Quote_Premium_Step1_For_5X5__c.field-meta.xml
<CustomField>
    <fullName>Quote_Premium_Step1_For_5X5__c</fullName>
    <label>Quote Premium Step1 For 5X5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>