force-app/main/default/objects/Policy_Quote__c/fields/Quote_Premium_Step_1__c.field-meta.xml
<CustomField>
    <fullName>Quote_Premium_Step_1__c</fullName>
    <label>Quote Premium Step 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>