force-app/main/default/objects/Policy_Quote__c/fields/Quote_Premium_Step_2__c.field-meta.xml
<CustomField>
    <fullName>Quote_Premium_Step_2__c</fullName>
    <label>Quote Premium Step 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>