force-app/main/default/objects/Policy_Quote__c/fields/Rate_Before_Deductible_Step_1__c.field-meta.xml
<CustomField>
    <fullName>Rate_Before_Deductible_Step_1__c</fullName>
    <label>Rate Before Deductible Step 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>