force-app/main/default/objects/Policy_Quote__c/fields/Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions__c</fullName>
    <description>Terms &amp; Conditions</description>
    <inlineHelpText>Terms &amp; Conditions</inlineHelpText>
    <label>Terms &amp; Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>