force-app/main/default/objects/Policy_Quote__c/fields/Title_Premium__c.field-meta.xml
<CustomField>
    <fullName>Title_Premium__c</fullName>
    <label>Title Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>