force-app/main/default/objects/Policy_Quote__c/fields/X10X10__c.field-meta.xml
<CustomField>
    <fullName>X10X10__c</fullName>
    <label>10X10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>