force-app/main/default/objects/Policy_Quote__c/fields/X5X5_Override__c.field-meta.xml
<CustomField>
    <fullName>X5X5_Override__c</fullName>
    <label>5X5 Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>