force-app/main/default/objects/Policy_Quote__c/validationRules/x10X10_override_can_inputwhen_itis_10x10.validationRule-meta.xml
<ValidationRule>
    <fullName>x10X10_override_can_inputwhen_itis_10x10</fullName>
    <active>true</active>
    <description>10x10 can only be set when the per claim limit is greater than 10 million.</description>
    <errorConditionFormula>X10X10__c &lt;&gt;0 &amp;&amp;
 Not(Coverage__r.Is_10X10_Coverage__c)</errorConditionFormula>
    <errorDisplayField>X10X10__c</errorDisplayField>
    <errorMessage>10x10 can only be set when the per claim limit is greater than 10 million.</errorMessage>
</ValidationRule>